--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "utils",
   "version": "1.0.0",
   "description": "some utils",
-  "main": "lib/index.js",
+  "main": "dist/index.js",
   "directories": {
     "lib": "lib"
   },
   "scripts": {
-    "dev": "node lib/index.js"
+    "dev": "tsc && node dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,10 @@
   "bugs": {
     "url": "https://github.com/OneKissAndOneShot/utils/issues"
   },
-  "homepage": "https://github.com/OneKissAndOneShot/utils#readme"
+  "homepage": "https://github.com/OneKissAndOneShot/utils#readme",
+  "dependencies": {
+    "@types/node": "^18.0.1",
+    "ora": "^5.4.1",
+    "typescript": "^4.7.4"
+  }
 }
